# python_ooo_dev_tools

./: .gitignore  .readthedocs.yaml  .sourcery.yaml  README.rst  conftest.py  cspell.json  environment.yml  main.py  pip-env.txt  pkgs.txt  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  custom_bash.txt  devcontainer.json  docker-compose-full.yml  docker-compose.yml  startup.sh
.githooks/: notes.txt  pre-commit  pre-push
.github/workflows/: python-app-test.yml
cmds/: line_count.py  run_http.py  run_import_uno.py  run_pypi_upload_test.py  run_setup.py  run_setup_clean.py
cmds/docs/: obj_links.py  obj_links_to_file.py
cmds/util/: remove_import_uno.py  run_import_uno.py
docs/: Dockerfile  Dockerfile_pdf  conf.py  index.rst  requirements.txt  spelling_code.txt  style_guide.md  style_guide.txt
docs/dev_docs/: dev_notes.rst  tute_ss.rst
docs/guide/: embed_python.rst  guide_apso.rst  guide_ooodev_oxt.rst  index.rst
docs/help/: index.rst
docs/maps/: ODEV Format Help.mm  ODEV Format.mm
docs/misc/: credits.rst
docs/odev/: index.rst  preface.rst
docs/roles/: theme_color_roles.txt
docs/src/: index.rst
docs/version/: version_hist.rst
ooodev/: __init__.py
ooodev/Gui/: tk_password.py
ooodev/adapter/: adapter_base.py  builder_helper.py  component_base.py  component_prop.py  struct_base.py
ooodev/calc/: __init__.py  calc_cell.py  calc_cell_cursor.py  calc_cell_range.py  calc_cell_text_cursor.py  calc_charts.py  calc_doc.py  calc_form.py  calc_forms.py  calc_sheet.py  calc_sheet_id.py  calc_sheet_view.py  calc_sheets.py  calc_table_col.py  calc_table_row.py  spreadsheet_draw_page.py  spreadsheet_draw_pages.py
ooodev/cfg/: config.json  config.py
ooodev/conn/: cache.py  conn_factory.py  connect.py  connect_ctx.py  connectors.py
ooodev/dialog/: __init__.py  dialog.py  dialog_control.py  dialogs.py  input.py  msgbox.py  tk_input.py
ooodev/draw/: __init__.py  draw_doc.py  draw_doc_view.py  draw_form.py  draw_forms.py  draw_page.py  draw_pages.py  draw_text.py  draw_text_cursor.py  generic_draw_page.py  generic_draw_pages.py  impress_doc.py  impress_page.py  impress_pages.py  master_draw_page.py  shape_collection.py
ooodev/events/: calc_named_event.py  cancel_event_args.py  chart2_named_event.py  dispatch_cancel_event.py  dispatch_event.py  draw_named_event.py  event_args.py  event_singleton.py  events.py  events_t.py  format_named_event.py  gbl_named_event.py  lo_events.py  lo_named_event.py  named_event.py  props_named_event.py  static_event_base.py  style_named_event.py  write_named_event.py
ooodev/exceptions/: ex.py
ooodev/form/: __init__.py  forms.py
ooodev/format/: __init__.py  readme.md  style_base.py  style_const.py  styler.py
ooodev/formatters/: __init__.py  format_list_item.py  format_string.py  format_table_item.py  formatter_list.py  formatter_table.py  only_ignore_kind.py  string_kind.py  table_item_kind.py  table_item_processer.py  table_item_processor.py  table_rule_kind.py
ooodev/globals/: __init__.py  gbl_events.py
ooodev/gui/: __init__.py  gui.py
ooodev/io/: logging.py
ooodev/lazy/: lazy_import.py
ooodev/listeners/: x_event_adapter.py  x_modify_adapter.py  x_selection_change_adapter.py  x_terminate_adapter.py  x_top_window_adapter.py
ooodev/loader/: __init__.py  lo.py
ooodev/macro/: __init__.py  macro_loader.py
ooodev/meta/: class_property_readonly.py  constructor_singleton.py  deleted_attrib.py  deleted_enum_meta.py  disabled_method.py  singleton.py  static_meta.py  static_prop.py
ooodev/mock/: mock_g.py  unohelper.py
ooodev/office/: calc.py  chart.py  chart2.py  draw.py  write.py  writer.py
ooodev/proto/: callable_any_t.py  component_proto.py  dispatch_shape.py  event_observer.py  office_document_t.py  size_obj.py  style_obj.py  unit_obj.py  uno_proto.py
ooodev/styles/: __init__.py  font.py  paragraphs.py  style.py  style_base.py  style_const.py  styler.py  sytle_base.py  tbl_borders.py
ooodev/theme/: __init__.py  theme.py  theme_basic.py  theme_calc.py  theme_draw.py  theme_general.py  theme_html.py  theme_rpt_builder.py  theme_sql.py  theme_text_doc.py
ooodev/units/: __init__.py  angle.py  angle10.py  angle100.py  angle_t.py  angle_unit_obj.py  app_font_pos.py  app_font_size.py  size_mm100.py  size_pos_mm100.py  size_pos_px.py  size_px.py  unit_app_font.py  unit_app_font_height.py  unit_app_font_width.py  unit_app_font_x.py  unit_app_font_y.py  unit_cm.py  unit_convert.py  unit_factory.py  unit_inch.py  unit_inch10.py  unit_inch100.py  unit_inch1000.py  unit_mm.py  unit_mm10.py  unit_mm100.py  unit_obj.py  unit_pt.py  unit_px.py
ooodev/utils/: __init__.py  chart.py  chart2.py  color.py  connect.py  date_time_util.py  dialogs.py  draw.py  enum_helper.py  file_io.py  forms.py  gallery.py  gen_util.py  gui.py  image_transferable.py  images.py  images_lo.py  info.py  lo.py  lo_util.py  lru_cache.py  paths.py  props.py  result.py  runtime.py  script_context.py  selection.py  session.py  sys_info.py  table_helper.py  text_transferable.py  type_var.py  unit_convert.py  uno_const.py  uno_enum.py  uno_util.py  validation.py  view_state.py  xml_util.py  xml_util_orig.py
ooodev/wrapper/: break_context.py
ooodev/write/: __init__.py  write_character_style.py  write_doc.py  write_draw_page.py  write_draw_pages.py  write_form.py  write_forms.py  write_paragraph.py  write_paragraph_cursor.py  write_paragraph_style.py  write_paragraphs.py  write_sentence_cursor.py  write_text.py  write_text_content.py  write_text_cursor.py  write_text_cursors.py  write_text_frame.py  write_text_frames.py  write_text_portion.py  write_text_portions.py  write_text_range.py  write_text_ranges.py  write_text_table.py  write_text_tables.py  write_text_view_cursor.py  write_word_cursor.py
ooodev/xml/: xml.py
src/cmds/: manage_env_cfg.py  run_auto.py  uno_lnk.py
src/utils/: util.py
tests/: README.md  __init__.py  conftest.py  test_calc.py  test_config.py  test_date_time_util.py  test_table_helper.py  test_types.py  test_uno_enum.py  test_write.py
tests/meta/: test_static_meta.py
(+7161 files in other folders)
